Affichage de la todolist et création du formulaire

--- a/views/todolist.ejs
+++ b/views/todolist.ejs
@@ -6,6 +6,11 @@
 <body>
         <h1>Todo List</h1>
 
+        <form method="POST" action="/task">
+            <input type="text" placeholder="Nouvelle tâche" name="task" autofocus>
+            <button type="submit">Ajouter</button>
+        </form>
+
         <h3>Tâches</h3>
 
         <ul>
