--- a/views/todolist.ejs
+++ b/views/todolist.ejs
@@ -7,7 +7,7 @@
         <h1>Todo List</h1>
 
         <form method="POST" action="/task">
-            <input type="text" placeholder="Nouvelle tâche" name="task" autofocus>
+            <input type="text" placeholder="Nouvelle tâche" name="task" autofocus required>
             <button type="submit">Ajouter</button>
         </form>
 
@@ -15,8 +15,8 @@
 
         <ul>
             <% tasks.forEach((task, idx) => { %>
-                <% if (task.done) { %>
-                    <li>
+                <li>
+                    <% if (task.done) { %>
                         <s><%= task.title  %></s>
                         |  <a href="/task/<%= idx %>/delete">Suprimer</a>
                     <% } else { %>
